# variad

./: .gitignore  CMakeLists.txt  README.md  hvv_macro_config.json  internal_macro_config.json  macro_config.json
CMake/: BuildHelper.cmake.in
src/cpp/variad/: CMakeLists.txt  hvv_arg.hpp  hvv_arg_test.cpp  hvv_cat.hpp  hvv_for_each.hpp  hvv_for_each_test.cpp  hvv_inc.hpp
src/cpp/variad/internal/: arg.hpp  arg_test.cpp  cat.hpp  for_each.hpp  for_each_test.cpp  inc.hpp  playground.cpp  playground2.cpp  playground3.cpp  playground4.cpp  playground5.cpp
src/py/: generate_arg.py  generate_inc.py  generate_macros.py  utils.py
src/variad/: CMakeLists.txt  heavy_variant_test.cpp
src/variad/cpp/: CMakeLists.txt  arg.hpp  cat.hpp  for_each.hpp  heavy_variant_test.cpp  hvv_arg.hpp  hvv_arg_test.cpp  hvv_cat.hpp  hvv_defer.hpp  hvv_for_each.hpp  hvv_for_each_test.cpp  hvv_inc.hpp  hvv_playground.cpp  playground.cpp
src/variad/py/: generate_arg.py  generate_cat.py  generate_defer.py  generate_for_each.py  generate_inc.py  generate_macros.py  utils.py
